# mini-miden

./: Cargo.toml  README.md
network/: Cargo.toml
network/src/: main.rs
user/: Cargo.toml
user/src/: lib.rs  main.rs
verifier/: Cargo.toml
verifier/src/: main.rs
